--- a/regexp.html
+++ b/regexp.html
@@ -27,6 +27,10 @@
           // 校验浮点型数字
           str = '452.23';
           var reg_float = /^([1-9]\d*|(0|[1-9]\d*)\.\d*[0-9])$/.test(str);
+
+          // 校验字符串是否含有中文
+          str = '100万';
+          var reg_cn = /[\u4e00-\u9fa5]/.test(str);
         </script>
 
     </body>
