--- a/canvas.html
+++ b/canvas.html
@@ -46,6 +46,7 @@
         <button id="fillStyleBtn" class="radius-btn">填充和描边</button>
         <button id="rectBtn" class="radius-btn">绘制矩形</button>
         <button id="pathBtn" class="radius-btn">绘制路径</button>
+        <button id="textBtn" class="radius-btn">绘制文本</button>
       </div>
 
       <div id='fillStyle'>
@@ -81,7 +82,7 @@
         function init(){
           // 测试浏览器兼容
           var fill_style = document.getElementById('fillStyle');
-          var _canvas = getCanvasNode(fill_style), _context;
+          var _canvas = getDivNode(fill_style, 'canvas'), _context;
           try{
             _context = _canvas.getContext('2d');
           }catch(e){
@@ -105,13 +106,16 @@
           // 路径按钮
           var pathBtn = document.getElementById('pathBtn');
           pathBtn.onclick = drawPath;
+          // 文本按钮
+          var textBtn = document.getElementById('textBtn');
+          textBtn.onclick = drawText;
         }
         // 绘制填充跟描边
         function fillStroke(){
           hideAllCanvas();
           btn_cont.style.display = 'block';
           var fill_style = document.getElementById('fillStyle');
-          var _canvas = getCanvasNode(fill_style);
+          var _canvas = getDivNode(fill_style, 'canvas');
           var ctx = _canvas.getContext('2d');
           fill_style.style.display = 'block';
           // 清空画板重新绘制
@@ -146,7 +150,7 @@
           hideAllCanvas();
           btn_cont.style.display = 'block';
           var rect = document.getElementById('rect');
-          var _canvas = getCanvasNode(rect);
+          var _canvas = getDivNode(rect, 'canvas');
           var ctx = _canvas.getContext('2d');
           rect.style.display = 'block';
           // 清空画板重新绘制
@@ -172,7 +176,7 @@
         // 清除fillRect
         function clearRect(){
           var rect = document.getElementById('rect');
-          var _canvas = getCanvasNode(rect);
+          var _canvas = getDivNode(rect, 'canvas');
           var ctx = _canvas.getContext('2d');
           // 清空画板重新绘制
           ctx.clearRect(300, 0, 200, 200);
@@ -181,14 +185,15 @@
           ctx.font = '12px arial';
           ctx.fillText('ctx.clearRect(300, 0, 200, 200);', 312, 20);
         }
-        // 绘制路径
-        function drawPath(){
+        // 绘制圆形
+        function drawCircular(){
           hideAllCanvas();
           btn_cont.style.display = 'block';
           var path = document.getElementById('path');
-          var _canvas = getCanvasNode(path);
+          var _canvas = getDivNode(path, 'canvas');
           var ctx = _canvas.getContext('2d');
           path.style.display = 'block';
+
           // 清空画板重新绘制
           ctx.clearRect(0, 0, 800, 800);
           // 绘制钟表
@@ -207,6 +212,8 @@
           // 描边路径
           ctx.stroke();
           // 添加说明
+          ctx.textAlign = 'start';
+
           ctx.fillStyle = '#000';
           ctx.font = '12px arial';
           ctx.fillText('ctx.beginPath();', 312, 20);
@@ -218,14 +225,60 @@
           ctx.fillText('ctx.moveTo(100, 100);', 312, 140);
           ctx.fillText('ctx.lineTo(35, 100);', 312, 160);
           ctx.fillText('ctx.stroke();', 312, 180);
+
+          return ctx;
+        }
+        // 绘制路径
+        function drawPath(){
+          var path = document.getElementById('path');
+          drawCircular();
+          // 修改h3文字
+          changeNodeText(path, '绘制路径: arc arcTo bezierCurveTo lineTo moveTo quadraticCurveTo rect');
+        }
+
+        // 绘制文本
+        function drawText(){
+          var path = document.getElementById('path');
+          // 绘制完圆形
+          var ctx = drawCircular();
+
+          // 修改h3文字
+          changeNodeText(path, '绘制文本：font textAlign textBaseline fillText');
+
+          ctx.fillText("ctx.font = 'bold 12px arial';", 312, 200);
+          ctx.fillText("ctx.textAlign = 'center';", 312, 220);
+          ctx.fillText("ctx.textBaseline = 'middle';", 312, 240);
+          ctx.fillText("ctx.fillText('12', 100, 20);", 312, 260);
+          ctx.fillText("ctx.textAlign = 'start';", 312, 280);
+          ctx.fillText("ctx.fillText('12', 100, 40);", 312, 300);
+          ctx.fillText("ctx.textAlign = 'end';", 312, 320);
+          ctx.fillText("ctx.fillText('12', 100, 60);", 312, 340);
+
+          // 修改canvas文字
+          ctx.font = 'bold 12px arial';
+          ctx.textAlign = 'center';
+          ctx.textBaseline = 'middle';
+          ctx.fillText('12', 100, 20);
+          // 起点对齐
+          ctx.textAlign = 'start';
+          ctx.fillText('12', 100, 40);
+          // 终点对齐
+          ctx.textAlign = 'end';
+          ctx.fillText('12', 100, 60);
+        }
+
+        // 修改h3文字
+        function changeNodeText(p_node, new_txt){
+          var h3 = getDivNode(p_node, 'h3');
+          h3.innerHTML = new_txt;
         }
 
         // 获得div内的canvas节点(有多个的话， 只获得第一个)
-        function getCanvasNode(p_node){
+        function getDivNode(p_node, n_type){
           var _node_list = p_node.childNodes, i , _node, len, result = null;
           for (i = 0, len = _node_list.length; i < len; i++) {
             _node = _node_list[i];
-            if (_node.nodeType === 1 && _node.nodeName.toLocaleLowerCase() == 'canvas') {
+            if (_node.nodeType === 1 && _node.nodeName.toLocaleLowerCase() == n_type) {
               result = _node;
               break;
             }
