--- a/regexp.html
+++ b/regexp.html
@@ -31,7 +31,22 @@
           // 校验字符串是否含有中文
           str = '100万';
           var reg_cn = /[\u4e00-\u9fa5]/.test(str);
-          
+
+          // 给所有String对象添加trim方法
+          String.prototype.trim = function(){
+             return this.replace(/(^\s*)|(\s*$)/g, "");
+          }
+
+          // 用js实现一个电话号码提取的方法。
+          // 例如：" 1852145998 020-888-999845 测试 021  -  85421987, 19865754"
+          // 得到的结果应该是[1852145998, 020-888-999845 , 021 - 85421987, 19865754]
+          var str = ' 1852145998 020-888-999845 测试 021  -  85421987, 19865754';
+          var reg_no = /(\d{3}\s*-\s*?){0,2}\d{6,11}/g;
+          var _r = str.match(reg_no);
+          console.log(_r);
+          // match是返回所有匹配的字符串合成的数组，但是正则表达式必须指定全局g属性才能返回所有匹配，不指定g属性则会返回一个只有一个元素的数组。
+          // exec永远返回与第一个匹配相关的信息，其返回数组包括第一个匹配的字串，所有分组的反向引用。
+
         </script>
 
     </body>
