改动的构思

--- a/canvas.html
+++ b/canvas.html
@@ -407,7 +407,7 @@
           h3.innerHTML = new_txt;
         }
 
-        // 获得div内的canvas节点(有多个的话， 只获得第一个)
+        // 获得div内的节点(有多个的话， 只获得第一个)
         function getDivNode(p_node, n_type){
           var _node_list = p_node.childNodes, i , _node, len, result = null;
           for (i = 0, len = _node_list.length; i < len; i++) {
